--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -300,7 +300,7 @@ Os gráficos da função apresentada nessa seção, do gradiente e das curvas de
     \subfloat[][Gradiente da função objetivo]{\includegraphics[scale=1]{img/section2/grasexfun.png}}
     \qquad
     \subfloat[][Curvas de nível]{\includegraphics[scale=1]{img/section2/nivelsexfun.png}}
-    \caption{Quinta função de teste}%
+    \caption{Sexta função de teste}%
     \label{fig:sexfun}%
 \end{figure}
 \FloatBarrier
