--- a/sections/section3-1.tex
+++ b/sections/section3-1.tex
@@ -1,204 +1,10 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{data/sect3s1/sec3s1tbl2.txt}{\tbla}
-\pgfplotstableread{data/sect3s1/sec3s1tbl3.txt}{\tblb}
-\pgfplotstableread{data/sect3s1/sec3s1tbl4.txt}{\tblc}
-\pgfplotstableread{data/sect3s1/sec3s1tbl5.txt}{\tbld}
-\pgfplotstableread{data/sect3s1/sec3s1tbl6.txt}{\tble}
-\pgfplotstableread{data/sect3s1/sec3s1tbl7.txt}{\tblf}
-\pgfplotstableread{data/sect3s1/sec3s1tbl8.txt}{\tblg}
-\pgfplotstableread{data/sect3s1/sec3s1tbl9.txt}{\tblh}
-
-\pgfplotstableread{data/sect3s1/sect3s1f1_TEnd_Medio.txt}{\tblanovaT}
-\pgfplotstableread{data/sect3s1/sect3s1f1_N_Iter_Medio.txt}{\tblanovaNI}
-\pgfplotstableread{data/sect3s1/sect3s1f1_N_Evals_F_Medio.txt}{\tblanovaNE}
-\pgfplotstableread{data/sect3s1/sect3s1f1_Erro_Xsol_P_Medio.txt}{\tblanovaEX}
-\pgfplotstableread{data/sect3s1/sect3s1f1_Erro_F_P_Medio.txt}{\tblanovaEF}
-
 \section{1° Experimento: Avaliação das Funções Quadráticas}
     \subsection{Primeira Função Analisada}
-
-    A primeira função analisada consiste na função \ref{eq:prifuntst} da seção \ref{sec:prifun}, reapresentada a seguir:
-
-    \begin{equation*} 
-        f(x)= \frac{1}{2}*(x-c)^{T}*A*(x-c)
-    \end{equation*}
-
-    Para o experimento em questão a função objetivo é avaliada em duas dimensões. Nesse caso, o número máximo de iterações, calculado por meio da equação \ref{eq:maxevals}, é igual a $400$ e os limites inferior e superior das variáveis $[\-10, 10 ]\ $.
-
-    Na execução dos algoritmos, os métodos Quase-Newton, deverão considerados quatro pontos iniciais. Em dois pontos iniciais empregando a técnica da seção áurea diretamente na avaliação da função e, nos outros dois pontos, usando  a técnica da seção áurea feita por aproximações quadráticas para a função, conforme exibido abaixo:
-    \begin{itemize}
-        \item $x_{0_1}=[\ 9 , 9 ]\ \rightarrow$ 1º Quadrante $\Rightarrow$ Aproximações Quadráticas  
-        \item $x_{0_2}=[\ -3 , 2 ]\ \rightarrow$ 2º Quadrante $\Rightarrow$ Avaliação Direta da Função
-        \item $x_{0_3}=[\ -8 , -6 ]\ \rightarrow$ 3º Quadrante $\Rightarrow$ Aproximações Quadráticas  
-        \item $x_{0_4}=[\ 5 , -7 ]\ \rightarrow$ 4º Quadrante $\Rightarrow$ Avaliação Direta da Função
-    \end{itemize} 
-
-    Os resultados obtidos são apresentados nas tabelas abaixo.
-    \vspace{2mm}
-    
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_{0_{1}}=[9,9]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
-            \label{tab:tbla} 
-            \writetable{\tbla}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
-        \end{minipage}
-
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_{0_{2}}=[-3,2]\Longrightarrow$  Avaliação Direta de $f(x)$
-            \label{tab:tblb} 
-            \writetable{\tblb}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
-        \end{minipage}
-
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_{0_{3}}=[-8,-6]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
-            \label{tab:tblc} 
-            \writetable{\tblc}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{3}}$}
-        \end{minipage}
-        
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_{0_{4}}=[5,-7]\Longrightarrow$  Avaliação Direta de $f(x)$
-            \label{tab:tbld} 
-            \writetable{\tbld}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{4}}$}
-        \end{minipage}
-
-        \subsubsection{Análise Anova}
-
-\begin{minipage}[h!]{\linewidth}
-    \centering
-    \hrule
-    \vspace{2mm}
-    {Tabela Anova 2 Fatores com blocos Aleatórizados}
-    \vspace{2mm}
-    \noindent
-    \hrule 
-    \vspace{2mm}
-    Tempo de Processamento Médio\\
-    \label{tab:tblDa} 
-    \writeanova{\tblanovaT}\par
-    \bigskip
-    \centering
-    Número de Iterações\\
-    \label{tab:tblDb} 
-    \writeanova{\tblanovaNI}\par
-    \bigskip
-    \centering
-    Número de Avaliações de $f(x)$\\
-    \label{tab:tblDc} 
-    \writeanova{\tblanovaNE}\par
-    \bigskip
-    \centering
-    {Erro de $X_{sol}(\%)$}\\
-    \label{tab:tblDb} 
-    \writeanova{\tblanovaEX}\par
-    \bigskip
-    \centering
-    {Erro de $F(X_{sol})(\%)$}\\
-    \label{tab:tblDb} 
-    \writeanova{\tblanovaEF}\par
-    \vspace{2mm}
-    \hrule
-    \vspace{2mm}
-    \captionof{table}{Análise estatística dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=0.0263$}
-\end{minipage}
-
-            Para funções quadráticas, os métodos Quase-Newton:
-            \begin{itemize}
-            \item {Tempo (s):} As aproximações Quadráticas para $F(s)$ apresentam um tempo médio de execução 10 vezes maior. A média dos tempos é semelhante para todos os métodos. O teste F da tabela anova indica que o método de cálculo da Seção Áurea interfere significativamente para a variação dos tempos médios de execução assim como a iteração entre este o método de otimização. 
-            \item {Iterações:} Não variou significativamente para qualquer uma das condições. O teste F da tabela anova indica que o método de cálculo da Seção Áurea interfere significativamente para a variação do número de Iterações. Aparentemente, pela observação direta dos resultados, tem-se uma variação devida ao quadrante do ponto inicial que foi cancelada.
-            \item {Avaliações de$F(x)$:} Tanto a observação direta dos dados quanto o teste F da tabela anova indica que o método de cálculo da Seção Áurea interfere significativamente para na variação do número de Avaliações de$F(x)$.
-            \item {Erro $X_{sol}$ (\%):} O erro é muito pequeno para todas as todas as variações, $\leq 10^{-9}$. Aparentemente o quadrante do ponto inicial aumenta em $10^5$ o tempo erro de $X_{sol}$. Pontos iniciais nos $1\degree$ e $4\degree$ quadrantes tem erros maiores. Porém ainda são virtualmente zero. O teste F da tabela anova considera que nenhum dos fatores é capaz de causar alteração significativa desta variável.
-            \item {Erro $F(x_{sol})$ (\%):} \textbf{Sempre} zeram o erro da Função objetivo calculado no ponto da solução para todas variações de todos os fatores. O teste F da tabela anova considera que nenhum dos fatores é capaz de causar alteração significativa desta variável, devido a ela ter valor zero para todos os blocos executados.
-            \end{itemize}
-            
+        \input{sections/section3-1_1} 
     \subsection{Segunda Função Analisada}
-
-    A Segunda função analisada consiste na função apresentada na seção \ref{sec:secfun}.
-
-    A função objetivo apresentada na equação (\ref{eq:secfuntst}) possui duas variáveis de decisão. Nesse caso, o número máximo de iterações, calculado por meio da equação \ref{eq:maxevals}, é igual a 400 e os limites das variáveis de decisão $[\ -10 , 10 ]\ $. No intuito de obter uma função quadrática, o parâmetro $a$ é igual a zero, resultando em:
-
-    \begin{equation*} 
-        f(x) = 12*x_1^2 - 4*x_2^2 - 12*x_1x_2 + 2*x_1
-    \end{equation*}
-    
-    Na execução dos algoritmos que implementam os métodos Quase-Newton deverão ser considerados dois pontos iniciais definidos aleatoriamente pelo aluno. Em um desses dois pontos iniciais será usada a técnica da seção áurea da avaliação direta da função e, no outro, por meio das aproximações quadráticas para a função a cada iteração. 
-
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
-            \label{tab:tble} 
-            \writetable{\tble}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
-        \end{minipage}
-        
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
-            \label{tab:tblf} 
-            \writetable{\tblf}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
-        \end{minipage}
-
-         \subsubsection{Conclusão Parcial}
-            Para funções quadráticas, os métodos Quase-Newton:
-            \begin{itemize}
-            \item {Tempo (s):} 
-            \item {Iterações:} 
-            \item {Avaliações de$F(x)$:} 
-            \item {Erro $X_{sol}$ (\%):} 
-            \item {Erro $F(x_{sol})$ (\%):} 
-            \end{itemize}        
-   
+        \input{sections/section3-1_2} 
     \subsection{Terceira Função Analisada}
-
-    A terceira função analisada consiste na função da seção \ref{sec:terfun}.
-    
-    A função objetivo apresentada acima possui duas variáveis de decisão. Nesse caso, o número máximo de iterações, calculado por meio da equação \ref{eq:maxevals}, é igual a 400 e os limites das variáveis de decisão definem o seguinte intervalo $[\ 0 , 3 ]\ $. Nesse intervalo, embora a função $f(x)$ possua dois termos cúbicos, a mesma se comporta como uma função quadrática. Sabendo que $a=\sqrt{2}$, tem-se que:
-
-    \begin{equation*} 
-        f(x) = -8*x_1*x_2+2*x_2*x_1^3+2*x_1*x_2^3
-    \end{equation*}
-
-    Na execução dos algoritmos que implementam os métodos Quase-Newton, na análise dessa função, serão considerados dois pontos iniciais definidos aleatoriamente pelo aluno. Em um desses dois pontos iniciais será utilizada a técnica da seção áurea feita através da avaliação direta da função e, no outro, por meio das aproximações quadráticas para a função a cada iteração.
-
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Avaliação Direta de $f(x)$
-            \label{tab:tblg} 
-            \writetable{\tblg}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{1}}$}
-        \end{minipage}
-        
-        \begin{minipage}{\linewidth}
-            \centering
-            $x_0=[x_1,x_2]\Longrightarrow$  Aproximações Quadráticas para $f(x)$
-            \label{tab:tblh} 
-            \writetable{\tblh}
-            \bigskip
-            \captionof{table}{Resultados relacionados ao esforço computacional e precisão considerando o ponto inicial $x_{0_{2}}$}
-        \end{minipage}
-
-        \subsubsection{Conclusão Parcial}
-            Para funções quadráticas, os métodos Quase-Newton:
-            \begin{itemize}
-            \item {Tempo (s):} 
-            \item {Iterações:} 
-            \item {Avaliações de$F(x)$:} 
-            \item {Erro $X_{sol}$ (\%):} 
-            \item {Erro $F(x_{sol})$ (\%):} 
-            \end{itemize}
+        \input{sections/section3-1_3} 
 \newpage
