Updates from Overleaf

--- a/Parts/Part 3/Section 1/section3-1_1.tex
+++ b/Parts/Part 3/Section 1/section3-1_1.tex
@@ -11,6 +11,7 @@
 \pgfplotstableread{data/sect3s1/sect3s1f1_Erro_Xsol_P_Medio.txt}{\tblanovaEX}
 \pgfplotstableread{data/sect3s1/sect3s1f1_Erro_F_P_Medio.txt}{\tblanovaEF}
 
+\subsection{Primeira Função Analisada}
 
 A primeira função analisada consiste na função \ref{eq:prifuntst} da seção \ref{sec:prifun}, reapresentada a seguir:
 
