--- a/Parts/Part 3/Section 1/section3-1_2.tex
+++ b/Parts/Part 3/Section 1/section3-1_2.tex
@@ -9,6 +9,7 @@
 \pgfplotstableread{data/sect3s1/sect3s1f2_Erro_Xsol_P_Medio.txt}{\tblanovaEX}
 \pgfplotstableread{data/sect3s1/sect3s1f2_Erro_F_P_Medio.txt}{\tblanovaEF}
 
+\subsection{Segunda Função Analisada}
 
 A Segunda função analisada consiste na função apresentada na seção \ref{sec:secfun}.
 
