--- a/Parts/Part 3/Section 1/section3-1_3.tex
+++ b/Parts/Part 3/Section 1/section3-1_3.tex
@@ -9,6 +9,7 @@
 \pgfplotstableread{data/sect3s1/sect3s1f3_Erro_Xsol_P_Medio.txt}{\tblanovaEX}
 \pgfplotstableread{data/sect3s1/sect3s1f3_Erro_F_P_Medio.txt}{\tblanovaEF}
 
+\subsection{Terceira Função Analisada}
 
 A terceira função analisada consiste na função da seção \ref{sec:terfun}.
 
