--- a/Parts/Part 3/section3-6.tex
+++ b/Parts/Part 3/section3-6.tex
@@ -3,11 +3,11 @@
     \subsection{Função Analisada}
 
     \subsection{Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ e $\alpha=-0.0236$}
-        \input{sections/section3-6_1}
+        \input{Parts/Part 3/section3-6_1}
     \subsection{Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ e $\alpha=0$}   
-        \input{sections/section3-6_2}
+        \input{Parts/Part 3/section3-6_2}
     \subsection{Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ e $\alpha=0$}
-        \input{sections/section3-6_3}
+        \input{Parts/Part 3/section3-6_3}
     \subsection{Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ e $\alpha=0.0236$}
-        \input{sections/section3-6_4}
+        \input{Parts/Part 3/section3-6_4}
 \newpage
