--- a/main.tex
+++ b/main.tex
@@ -20,17 +20,11 @@
     \newpage
     \setlength{\parindent}{0cm}
     \part{Introdução}
-        \import{sections/}{section1}
+        \import{Parts/}{Part1}
     \part{Desenvolvimento}
-        \import{sections/}{section2}
+        \import{Parts/}{Part2}
     \part{Experimentos e Resultados}
-        \import{sections/}{section3-Intro}
-        \import{sections/}{section3-1}
-        \import{sections/}{section3-2}
-        \import{sections/}{section3-3}
-        \import{sections/}{section3-4}
-        \import{sections/}{section3-5}
-        \import{sections/}{section3-6}
+        \import{Parts/}{Part3}
     \part{Conclusão}
-        \import{sections/}{section4}
+        \import{Parts/}{Part4}
 \end{document}
